--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lotl",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "type": "module",
-  "description": "🦎 Convert Markdown to PDF with axolotl power",
+  "description": "Convert Markdown to PDF with axolotl power",
   "main": "index.js",
   "bin": {
     "lotl": "bin/lotl.js"
@@ -20,16 +20,11 @@
     "converter"
   ],
   "author": "Poran Dip",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
-    "chalk": "^5.5.0",
-    "commander": "^14.0.0",
-    "marked": "^16.1.2",
-    "puppeteer": "^24.16.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "eslint": "^9.33.0",
-    "globals": "^16.3.0"
+    "chalk": "^5.6.2",
+    "commander": "^14.0.2",
+    "marked": "^17.0.1",
+    "puppeteer": "^24.34.0"
   }
 }
