--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   ],
   "author": "Poran Dip",
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/poran-dip/lotl"
+  },
   "dependencies": {
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
